--- a/src/main/resources/static/sa-html/role/role-list.html
+++ b/src/main/resources/static/sa-html/role/role-list.html
@@ -45,7 +45,7 @@
 
 		<el-table :data="dataList" class="data-table" size="mini" style="width: 100%">
 
-			<el-table-column label="编号" prop="id" width="70px"></el-table-column>
+			<el-table-column label="编号" type="index" width="50px"></el-table-column>
 
 			<el-table-column label="角色名称">
 				<template slot-scope="scope">
@@ -56,7 +56,7 @@
 
 			<el-table-column label="责任描述">
 				<template slot-scope="scope">
-					<el-input :readonly="!scope.row.lock?false:'readonly'" size="mini" type="textarea"
+					<el-input :readonly="!scope.row.lock?false:'readonly'" autosize size="mini" type="textarea"
 					          v-model="scope.row.desc"></el-input>
 				</template>
 			</el-table-column>
