--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -232,7 +232,7 @@
 <script type="text/javascript">
     Vue.config.productionTip = false;
 </script>
-<script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
+<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 <script src="https://unpkg.com/swiper@4.5.0/dist/js/swiper.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
