--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -378,7 +378,7 @@
 <script type="text/javascript">
     Vue.config.productionTip = false;
 </script>
-<script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
+<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 <script type="text/javascript">
     new Vue({
         el: '.app',
