--- a/src/main/resources/static/sa-html/article/art-add.html
+++ b/src/main/resources/static/sa-html/article/art-add.html
@@ -10,7 +10,7 @@
 
 	<!-- 所有的 js 资源 -->
 	<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
-	<script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
+	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 	<script src="https://unpkg.com/wangeditor@3.1.1/release/wangEditor.min.js"></script>
 
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
