--- a/src/main/resources/static/sa-html/cfg/system-cfg.html
+++ b/src/main/resources/static/sa-html/cfg/system-cfg.html
@@ -12,7 +12,7 @@
 
 	<!-- 所有的 js 资源 -->
 	<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
-	<script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
+	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 
 	<style type="text/css">
 		.c-item .c-label {
