--- a/src/main/resources/static/sa-html/role/menu-list.html
+++ b/src/main/resources/static/sa-html/role/menu-list.html
@@ -8,7 +8,7 @@
 	<link href="../../static/sa.css" rel="stylesheet">
 	<!-- 所有的 js 资源 -->
 	<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
-	<script src="https://unpkg.com/element-ui@2.8.2/lib/index.js"></script>
+	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 	<script src="../../static/sa.js"></script>
