--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"
 	      name="viewport"/>
-	<link href="https://unpkg.com/element-ui@2.8.2/lib/theme-chalk/index.css" rel="stylesheet">
+	<link href="https://cdn.bootcss.com/element-ui/2.12.0/theme-chalk/index.css" rel="stylesheet">
 	<style type="text/css">
 		* {
 			padding: 0;
@@ -373,7 +373,7 @@
 
 </div>
 
-<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
+<script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
 
 <script type="text/javascript">
     Vue.config.productionTip = false;
