--- a/src/main/resources/static/sa-html/role/menu-list.html
+++ b/src/main/resources/static/sa-html/role/menu-list.html
@@ -4,10 +4,10 @@
 	<title>菜单分配</title>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 	<!-- 所有的 css 资源 -->
-	<link href="https://unpkg.com/element-ui/lib/theme-chalk/index.css" rel="stylesheet">
+	<link href="https://cdn.bootcss.com/element-ui/2.12.0/theme-chalk/index.css" rel="stylesheet">
 	<link href="../../static/sa.css" rel="stylesheet">
 	<!-- 所有的 js 资源 -->
-	<script src="https://unpkg.com/vue@2.6.10/dist/vue.js"></script>
+	<script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
 	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
