--- a/src/main/resources/static/sa-html/user/role-setup.html
+++ b/src/main/resources/static/sa-html/user/role-setup.html
@@ -14,7 +14,7 @@
 	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
-	<script src="../../static/sa.js"></script>
+	<script src="/static/sa.js"></script>
 </head>
 <body>
 <div class="vue-box">
