基础配置有问题，https://docs.spring.io/spring-boot/docs/2.2.2.RELEASE/reference/html/spring-boot-features.html#boot-features-developing-web-applications

--- a/src/main/resources/static/sa-html/article/art-list.html
+++ b/src/main/resources/static/sa-html/article/art-list.html
@@ -6,7 +6,7 @@
 
 	<!-- 所有的 css 资源 -->
 	<link href="https://cdn.bootcss.com/element-ui/2.12.0/theme-chalk/index.css" rel="stylesheet">
-	<link href="../../static/sa.css" rel="stylesheet">
+	<link href="../../res/sa.css" rel="stylesheet">
 
 	<!-- 所有的 js 资源 -->
 	<script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
@@ -14,7 +14,7 @@
 
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
-	<script src="../../static/sa.js"></script>
+	<script src="../../res/sa.js"></script>
 	<script src="data-list.js"></script>
 
 </head>
