--- a/src/main/resources/static/sa-html/cfg/500.html
+++ b/src/main/resources/static/sa-html/cfg/500.html
@@ -19,7 +19,7 @@
 		body {
 			background-color: #AAA;
 			background-size: 100% 100%;
-			background-image: url(../../static/img/500.jpg);
+			background-image: url(../../res/img/500.jpg);
 		}
 
 		.xiaoxi {
