--- a/src/main/resources/static/sa-html/cfg/system-cfg.html
+++ b/src/main/resources/static/sa-html/cfg/system-cfg.html
@@ -8,7 +8,7 @@
 
 	<!-- 所有的 css 资源 -->
 	<link href="https://cdn.bootcss.com/element-ui/2.12.0/theme-chalk/index.css" rel="stylesheet">
-	<link href="../../static/sa.css" rel="stylesheet">
+	<link href="../../res/sa.css" rel="stylesheet">
 
 	<!-- 所有的 js 资源 -->
 	<script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
