--- a/src/main/resources/static/sa-html/fileupload/file-upload.html
+++ b/src/main/resources/static/sa-html/fileupload/file-upload.html
@@ -15,7 +15,7 @@
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 	<script src="/sa-resources/admin-util.js"></script>
-	<script src="/static/sa.js"></script>
+	<script src="/res/sa.js"></script>
 	<style>
 		.box-card {
 			margin-bottom: 1rem;
