--- a/src/main/resources/static/sa-html/menu/menuadd.html
+++ b/src/main/resources/static/sa-html/menu/menuadd.html
@@ -73,7 +73,7 @@
 	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
-	<script src="/static/sa.js"></script>
+	<script src="/res/sa.js"></script>
 	<script type="text/javascript">
         window.setData = function (data, modify) {
             if (!data) return;
