--- a/src/main/resources/static/sa-html/user/user-add.html
+++ b/src/main/resources/static/sa-html/user/user-add.html
@@ -15,7 +15,7 @@
 	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
 	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
-	<script src="/static/sa.js"></script>
+	<script src="/res/sa.js"></script>
 
 	<style type="text/css">
 
