--- a/src/main/resources/static/sa-html/house/house.html
+++ b/src/main/resources/static/sa-html/house/house.html
@@ -3,9 +3,16 @@
 <head>
 	<meta charset="UTF-8">
 	<title></title>
-	<link href="https://www.layuicdn.com/layui/css/layui.css" rel="stylesheet" type="text/css"/>
-	<script src="https://www.layuicdn.com/layui/layui.js"></script>
+	<link href="https://cdn.bootcss.com/element-ui/2.12.0/theme-chalk/index.css" rel="stylesheet">
+	<link href="https://cdn.bootcss.com/Swiper/4.5.1/css/swiper.min.css" rel="stylesheet">
+
+	<script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
+	<script src="https://cdn.bootcss.com/element-ui/2.12.0/index.js"></script>
+	<script src="https://cdn.bootcss.com/Swiper/4.5.1/js/swiper.min.js"></script>
 	<script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+	<script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
+	<script src="/sa-resources/admin-util.js"></script>
+	<script src="/res/sa.js"></script>
 	<!--    <script src="https://api.map.baidu.com/api?v=2.0&ak=pB1cQmp3mKHrI8PMYQGoogGvGnpahqNn" type="text/javascript"></script>-->
 	<!--    <script type="text/javascript" src="//api.map.baidu.com/library/Heatmap/2.0/src/Heatmap_min.js"></script>-->
 	<script src="//webapi.amap.com/maps?v=1.4.15&key=187c426207df3f73a755da81f4a1ec58"></script>
@@ -40,6 +47,14 @@
 			/*box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);*/
 		}
 
+		.citydrop {
+			position: fixed;
+			top: 5rem;
+			right: 20px;
+			border-radius: 4px;
+			box-shadow: 0 0 5px rgba(0, 0, 0, 0.9);
+		}
+
 		.legend ul {
 			padding: 5px 20px;
 			margin: 0;
@@ -61,17 +76,22 @@
 			font-size: 14px;
 		}
 
+		body {
+			margin: 0;
+		}
+
 		.info {
 			padding: .75rem 1.25rem;
 			margin-bottom: 1rem;
 			border-radius: .25rem;
 			position: fixed;
 			top: 1rem;
-			background-color: white;
+			background: rgba(0, 0, 0, 0.5);
 			width: auto;
 			min-width: 22rem;
 			border-width: 0;
-			right: 4rem;
+			right: 8rem;
+			color: white;
 			box-shadow: 0 2px 6px 0 rgba(114, 124, 245, 0.5);
 		}
 
@@ -79,7 +99,6 @@
 		.info span {
 			min-width: 150px;
 			max-width: 300px;
-			color: #1b91ff;
 			font-size: 1.2em;
 		}
 	</style>
@@ -93,9 +112,18 @@
 	</p>
 </div>
 <a id="heightBtn">3D</a>
-<div class="legend">
-	<ul class="colors" id="legend-color"></ul>
-	<ul class="labels" id="legend-label" style="padding: 0"></ul>
+<!--<div class="legend">-->
+<!--	<ul class="colors" id="legend-color"></ul>-->
+<!--	<ul class="labels" id="legend-label" style="padding: 0"></ul>-->
+<!--</div>-->
+<div class="citydrop" id="dropdown">
+	<el-dropdown @command="handleCommand" size="mini" split-button type="primary">
+		{{currentcity}}
+		<el-dropdown-menu slot="dropdown">
+			<el-dropdown-item v-bind:command="item.name" v-bind:key="item.name" v-for="item in cityList">{{item.name}}
+			</el-dropdown-item>
+		</el-dropdown-menu>
+	</el-dropdown>
 </div>
 </body>
 </html>
