--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -48,58 +48,33 @@
 
 <div class="app">
 
-	<div class="content-box">
-		<div style="padding: 1em; border-left: 5px #2D8CF0 solid; background-color: #EEE;">
-			<big><big>Welcome to SA-后台模板 </big></big>
-			<span style="display: inline-block; margin-left: 1em; color: #888;"> —— 一个基于iframe的多窗口后台模板</span>
-		</div>
-	</div>
 
 	<div class="content-box">
 
-		<div class="saoma" style="width: 20%; float: left; margin-right: 4%;">
-			<el-divider content-position="left">
-				<big><big>扫码加入QQ群交流</big></big>
-			</el-divider>
-			<div style="text-align: center;">
-				<img src="sa-resources/admin-qqq.png" style="width: 80%; ">
-			</div>
-		</div>
 		<div class="kapian" style="width: 35%; float: left; margin-right: 4%;">
 			<el-divider content-position="left">
-				<big><big>SA-ADMIN</big></big>
+				<big><big>DDVUDO</big></big>
 			</el-divider>
 			<div style="font-size: 0.9em; line-height: 1.6em;">
-				<p>
-					虽然已经用过不少优秀的后台模板，但是一直都感觉不尽完美，于是在经过激烈的思想斗争后，我决定牺牲五一假期，亲自做一个尝试一下，
-					一来正好给以后自己的项目中使用，二来也算是为开源界做一点自己的贡献吧
-				</p>
 				<br>
 				<ul style="padding-left: 1em; line-height: 1.5em;">
 					<li>
-						<b>QQ群：</b>
-						<el-link href="https://jq.qq.com/?_wv=1027&k=5DHN5Ib" target="_blank" type="primary">782974737
-							点击加入
-						</el-link>
-					</li>
-					<li>
-						<b>码云地址：</b>
-						<el-link href="https://gitee.com/sz6/sa-admin" target="_blank" type="primary">
-							https://gitee.com/sz6/sa-admin
-						</el-link>
-					</li>
-					<li>
 						<b>GitHub地址：</b>
+						<el-link href="https://github.com/ddv12138/Java-Web-WebSite-Practice" target="_blank"
+						         type="primary">
+							https://github.com/ddv12138/Java-Web-WebSite-Practice
+						</el-link>
+					</li>
+				</ul>
+				<ul style="padding-left: 1em; line-height: 1.5em;">
+					<li>
+						<b>前端的部分参考项目</b>
 						<el-link href="https://github.com/click33/sa-admin" target="_blank" type="primary">
 							https://github.com/click33/sa-admin
 						</el-link>
 					</li>
-					<li>
-						开源不易，求鼓励，给个star吧
-					</li>
 				</ul>
 			</div>
-
 		</div>
 		<div class="kapian" style="width: 35%; float: left;">
 			<el-divider content-position="left">
@@ -128,12 +103,6 @@
 				<li>
 					<el-link href="http://www.wangeditor.com/" target="_blank" type="primary">富文本编辑器：wangEditor @3.1.1
 					</el-link>
-				</li>
-				<li>
-					<el-link @click="meile">没了：占空</el-link>
-				</li>
-				<li>
-					以上几个框架即使你都没接触过，只要你阅读以下文档，也可以快速上手
 				</li>
 			</ul>
 		</div>
@@ -169,16 +138,9 @@
 				<li>
 					保留： 切换卡片时，可自动保留上个卡片的滚动条高度（目前没有见到其它任何一个模板做到这一点，或者说没有任何一个模板注意到这个细节功能点）
 				</li>
-				<li>
-					功能不断更新中... 你有好的想法也可以告诉我，加群一起交流吧
-				</li>
-				<li>
-					使用说明，
-					<a @click="openDoc" href="javascript:">见文档</a>
-				</li>
 			</ul>
 		</div>
-		<div class="kapian" style="font-size: 0.9em; line-height: 1.6em; width: 60%; float: left;">
+		<div class="kapian" style="font-size: 0.9em; line-height: 1.6em; width: 60%; float: left;display: none;">
 			<el-divider content-position="left">
 				<big><big>疑问：</big></big>
 			</el-divider>
@@ -211,166 +173,7 @@
 		</div>
 		<div style="clear: both;"></div>
 	</div>
-
-	<div class="content-box">
-		<el-divider content-position="left">
-			<big><big>更新日志</big></big>
-		</el-divider>
-		<div class="kapian" style="font-size: 0.9em; line-height: 1.6em;">
-			<ul style="padding-left: 1em; line-height: 1.5em;">
-
-				<div><br></div>
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.1.4</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-10-17
-				</li>
-				<li>重写了一下简介</li>
-				<li>优化主题样式</li>
-				<div><br></div>
-
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.1.3</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-9-3
-				</li>
-				<li>更改初始化方式</li>
-				<li>优化UI样式</li>
-				<li>增加新主题：灰色-展开</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.1.2</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-7-16
-				</li>
-				<li>增加右键菜单的失去焦点事件，失去焦点自动消失</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.1.1</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-6-26
-				</li>
-				<li>优化卡片切换动画，更流畅了，并且添加loading图标，视觉上更加顺畅</li>
-				<li>新增悬浮窗口功能，在卡片标题处右击试试吧</li>
-				<li>更换登录模板页，更漂亮了</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.1.0</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-6-24
-				</li>
-				<li>修复bug：鼠标悬浮page-title时，偶尔动画混乱的bug</li>
-				<li>修复bug：优化折叠动画，更流畅了</li>
-				<li>集成swiper，窗口切换，更加高大上了</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.8</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-28
-				</li>
-				<li>修复bug：菜单折叠时，菜单项箭头仍然显示的问题</li>
-				<li>修复bug：在手机端菜单折叠时，右侧信息排版发生混乱的问题</li>
-				<li>调整了一下字体大小，看着更顺眼了</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.7</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-25
-				</li>
-				<li>优化一些动画效果</li>
-				<li>增加模板页：轮播图管理</li>
-				<li>一些样式优化</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.6</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-22
-				</li>
-				<li>添加了菜单预览模板(tree树)</li>
-				<li>修复bug：菜单分配权限时，父子级不关联的问题</li>
-				<li>一些样式优化</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.5</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-18
-				</li>
-				<li>添加了权限中心模板(tree权限树)</li>
-				<li>优化用户列表模板，弹出式的修改</li>
-				<li>一些其它样式优化</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.4</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-15
-				</li>
-				<li>优化折叠动画，避免文字闪动现象</li>
-				<li>sp.setMenuList();接口增加show_list参数，可灵活控制部分菜单的显示与隐藏</li>
-				<li>一些样式优化</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.2</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-14
-				</li>
-				<li>添加文章管理模板(wangEditor富文本编辑器)</li>
-				<li>改写了表格里按钮的样式，更鲜艳，增加点击感</li>
-				<li>菜单列表里可以指定is_show=false，使菜单成为隐藏菜单</li>
-				<li>
-					重写了一些接口，可以更加方便的与你的系统集成
-				</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.1</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-5
-				</li>
-				<li>
-					修复周日显示周0的bug
-				</li>
-				<li>
-					主题更换时高亮显示，方便区分
-				</li>
-				<li>增加三级菜单支持</li>
-				<div><br></div>
-
-				<li>
-					<b>
-						<el-tag size="mini">版本 v1.0.0</el-tag>
-					</b>
-					&nbsp;&nbsp;2019-5-2
-				</li>
-				<li>第一个版本出炉</li>
-				<li>功能持续更新中...</li>
-			</ul>
-		</div>
-	</div>
-
 	<br><br>
-
 </div>
 
 <script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
@@ -393,7 +196,7 @@
             },
             // 显示文档页面
             openDoc: function () {
-                parent.sp.selectMenu(11);
+                // parent.sp.selectMenu(11);
             }
 
         }
