--- a/src/main/resources/static/sa-html/menu/menuadd.html
+++ b/src/main/resources/static/sa-html/menu/menuadd.html
@@ -139,21 +139,33 @@
                                     }, "json");
                                 } else {
                                     //修改时
-                                    $.ajax({
-                                        url: '/resource',
-                                        type: 'PUT',
-                                        data: JSON.stringify(this.$refs[formName].model),
-                                        success: function (data) {
-                                            if (data && data.state) {
-                                                layer.alert('更新成功', {icon: 1}, function (index) {
-                                                    layer.close(index);
-                                                    let curr_index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
-                                                    parent.layer.close(curr_index); //再执行关闭
-                                                    parent.refreshTreeData();
-                                                });
-                                            }
+                                    // $.ajax({
+                                    //     url: '/resource',
+                                    //     type: 'PUT',
+                                    //     data: JSON.stringify(this.$refs[formName].model),
+                                    //     success: function (data) {
+                                    //         if (data && data.state) {
+                                    //             layer.alert('更新成功', {icon: 1}, function (index) {
+                                    //                 layer.close(index);
+                                    //                 let curr_index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+                                    //                 parent.layer.close(curr_index); //再执行关闭
+                                    //                 parent.refreshTreeData();
+                                    //             });
+                                    //         }
+                                    //     }
+                                    // });
+                                    sa.ajax2('/resource', JSON.stringify(this.$refs[formName].model), function (data) {
+                                        if (data && data.state) {
+                                            layer.alert('更新成功', {icon: 1}, function (index) {
+                                                layer.close(index);
+                                                let curr_index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+                                                parent.layer.close(curr_index); //再执行关闭
+                                                parent.refreshTreeData();
+                                            });
                                         }
-                                    });
+                                    }, {
+                                        type: "put"
+                                    })
                                 }
                             } else {
                                 alert('出现错误!');
