做前后端分离

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -232,6 +232,7 @@
 <script src="https://cdn.bootcss.com/layer/3.0.1/layer.min.js"></script>
 
 <script src="sa-resources/admin-util.js"></script>
+<script src="/res/sa.js"></script>
 <script src="sa-resources/menu-list.js"></script>
 <script src="sa-resources/index.js"></script>
 <script src="sa-resources/my-code.js"></script>
