--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -86,8 +86,10 @@
     $("#login_btn").bind("click", function () {
         console.log(1);
         sa.ajax2("/user/login", JSON.stringify($("#login_form").serializeObject()), function (arg) {
-            console.log(arg)
-        }, {
+			if (arg && arg.state) {
+				window.location.href = '/';
+			}
+		}, {
             type: "post"
         })
     })
