--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -171,6 +171,9 @@
 		<div style="clear: both;"></div>
 	</div>
 	<br><br>
+	<a href="https://m.maploco.com/details/4f85z4ue"><img alt="Locations of Site Visitors"
+														  src="https://www.maploco.com/vmap/s/10037318.png"
+														  style="border:0px;" title="Locations of Site Visitors"/></a>
 </div>
 
 <script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
