--- a/src/main/resources/static/main.html
+++ b/src/main/resources/static/main.html
@@ -137,43 +137,44 @@
 				</li>
 			</ul>
 		</div>
-		<div class="kapian" style="font-size: 0.9em; line-height: 1.6em; width: 60%; float: left;display: none;">
-			<el-divider content-position="left">
-				<big><big>疑问：</big></big>
-			</el-divider>
+		<div class="kapian" style="font-size: 0.9em; line-height: 1.6em; width: 60%; float: left;">
+			<!--			<el-divider content-position="left">-->
+			<!--				<big><big>疑问：</big></big>-->
+			<!--			</el-divider>-->
 
-			<h4>vue、element-ui、layer我都没用过，可以用这个模板吗？</h4>
-			<p style="margin-top: 5px;">
-				首先你要明白，模板分为两部分（index.html框架与框架内的模板页）<br>
-				如果你只使用index.html框架部分，可以不必掌握vue等技术，使用时甚至你都不用改动源码，
-				只重写几个属性函数就可以集成到你的项目中，<br>
-				如果你要使用框架内的模板页，则需要对vue等框架有一定的了解
-			</p>
+			<!--			<h4>vue、element-ui、layer我都没用过，可以用这个模板吗？</h4>-->
+			<!--			<p style="margin-top: 5px;">-->
+			<!--				首先你要明白，模板分为两部分（index.html框架与框架内的模板页）<br>-->
+			<!--				如果你只使用index.html框架部分，可以不必掌握vue等技术，使用时甚至你都不用改动源码，-->
+			<!--				只重写几个属性函数就可以集成到你的项目中，<br>-->
+			<!--				如果你要使用框架内的模板页，则需要对vue等框架有一定的了解-->
+			<!--			</p>-->
 
-			<br>
-			<h4>为什么是iframe，而不是SPA？</h4>
-			<p style="margin-top: 5px;">
-				现在前端开发比较主流的三种方式：服务器渲染、前后端分离、SPA<br>
-				+ 服务器渲染：类似于jsp、asp、php等所有借助后端语言渲染视图的技术，这也是比较传统的一种方式 <br>
-				+ 前后端分离：脱离后端语言，只写html，就像是在写一个静态站，与服务器的交互全部走ajax<br>
-				+ SPA：在前后端分离的基础上更进一步，借助gulp、webpack等构件工具将项目打包成单页应用的一种方式 <br>
-				<b>本模板</b> 正是采用的第2种方式（so：本模板可能无法满足重度SPA患者）<br>
-				1、前后端分离，让我们脱离了后端语言的@include指令，不用为了代码的模块化再到处搜索xx技术如何热更新代码 <br>
-				2、不使用webpack、gulp等构建工具也可以写代码，不必再费尽心机搭建一个代码编译环境 <br>
-				3、网站头部底部等公共部分代码的复用是我们使用构建工具的主要目的，但是我们借助iframe标签，轻松巧妙的化解了这个难题，借助iframe，
-				让网站成为一个真正意义上的多窗口应用
-				（大多数服务器渲染方式每次切换窗口会造成窗口刷新，SPA将代码都塞到了一个页面中的方式使得我们写代码时变得瞻前顾后） <br>
-				4、返璞归真，像写静态站一样来写后台，一个html编辑器就可以强Lu所有代码，尝试一下，相信我，你会爱上这种开发模式的
-				<br>
-			</p>
-
+			<!--			<br>-->
+			<!--			<h4>为什么是iframe，而不是SPA？</h4>-->
+			<!--			<p style="margin-top: 5px;">-->
+			<!--				现在前端开发比较主流的三种方式：服务器渲染、前后端分离、SPA<br>-->
+			<!--				+ 服务器渲染：类似于jsp、asp、php等所有借助后端语言渲染视图的技术，这也是比较传统的一种方式 <br>-->
+			<!--				+ 前后端分离：脱离后端语言，只写html，就像是在写一个静态站，与服务器的交互全部走ajax<br>-->
+			<!--				+ SPA：在前后端分离的基础上更进一步，借助gulp、webpack等构件工具将项目打包成单页应用的一种方式 <br>-->
+			<!--				<b>本模板</b> 正是采用的第2种方式（so：本模板可能无法满足重度SPA患者）<br>-->
+			<!--				1、前后端分离，让我们脱离了后端语言的@include指令，不用为了代码的模块化再到处搜索xx技术如何热更新代码 <br>-->
+			<!--				2、不使用webpack、gulp等构建工具也可以写代码，不必再费尽心机搭建一个代码编译环境 <br>-->
+			<!--				3、网站头部底部等公共部分代码的复用是我们使用构建工具的主要目的，但是我们借助iframe标签，轻松巧妙的化解了这个难题，借助iframe，-->
+			<!--				让网站成为一个真正意义上的多窗口应用-->
+			<!--				（大多数服务器渲染方式每次切换窗口会造成窗口刷新，SPA将代码都塞到了一个页面中的方式使得我们写代码时变得瞻前顾后） <br>-->
+			<!--				4、返璞归真，像写静态站一样来写后台，一个html编辑器就可以强Lu所有代码，尝试一下，相信我，你会爱上这种开发模式的-->
+			<!--				<br>-->
+			<!--			</p>-->
+			<a href="https://m.maploco.com/details/0a75z4up"><img alt="Locations of Site Visitors"
+			                                                      src="https://www.maploco.com/vmap/10037329.png"
+			                                                      style="border:0px;"
+			                                                      title="Locations of Site Visitors"/></a>
 		</div>
-		<div style="clear: both;"></div>
+		<div style="clear: both;">
+		</div>
 	</div>
 	<br><br>
-	<a href="https://m.maploco.com/details/4f85z4ue"><img alt="Locations of Site Visitors"
-														  src="https://www.maploco.com/vmap/s/10037318.png"
-														  style="border:0px;" title="Locations of Site Visitors"/></a>
 </div>
 
 <script src="https://cdn.bootcss.com/vue/2.6.10/vue.js"></script>
